# simod_rolls_detection

simod_rolls_detection/: CMakeLists.txt  README.md
simod_rolls_detection/action/: DetectPacks.action
simod_rolls_detection/data/: sollevamento_pacchi_reference4_points.txt
simod_rolls_detection/launch/: roll_packs_detection.launch
simod_rolls_detection/msg/: ReferenceImage.msg
simod_rolls_detection/pallet_detection/: CMakeLists.txt
simod_rolls_detection/pallet_detection/src/: roll_pack_detection.cpp  roll_pack_detection.h
simod_rolls_detection/src/: roll_pack_detection_node.cpp  roll_pack_detection_test.cpp
